<resources>
    <string name="app_name">Duar Rider App</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="parcel">parcel</string>
    <string name="updatePasswordNote">Looks like you haven\'t updated your password yet !</string>
    <string name="title_activity_new_ride_alart">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="new_ride_assigned">New Ride Assigned</string>
    <string name="pick_up_address">Pick-up Address</string>
    <string name="status">Status</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="payment">Payment</string>
    <string name="confirm">Confirm</string>


</resources>